[package]
name = "running_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
dotenvy = "0.15.7"
handlebars = "4.3.7"
quick-xml = { version = "0.28.2", features = ["serialize"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
